# TRDb

./: AUTHORS  LICENSE  README.md
trdb_api/: pyproject.toml  tox.ini
trdb_api/src/: manage.py
trdb_api/src/accounts/: filters.py  tests.py  urls.py  views.py
trdb_api/src/resources/: admin.py  apps.py  filters.py  models.py  receivers.py  serializers.py  signals.py  tests.py  urls.py  views.py
trdb_api/src/trdb/: asgi.py  settings.py  urls.py  views.py  wsgi.py
trdb_webui/: package-lock.json  package.json
